Fix bottom nav on tablet... again

--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ Begin Media Queries
 		display: inline-block;
 		width: 25%;
 	}
-	.bottom-nav {
+	.bottom-footer .bottom-nav {
 		display: inline-block;
 		width: 75%;
 	}
